--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
-x
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>Srév - سيرفرات</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom right, #d7d6d6, #918b88, #565555);
+            color: #333;
+        }
+
+        .header {
+            text-align: center;
+            padding: 60px 20px 30px;
+            font-size: 64px;
+            font-weight: bold;
+            color: #222;
+        }
+
+        .cards {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .card {
+            background-color: white;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+
+        .card h3 {
+            margin: 0 0 10px;
+            color: #444;
+        }
+
+        .card p {
+            margin: 6px 0;
+        }
+
+        .button-container {
+            text-align: center;
+            margin: 40px 0;
+        }
+
+        .discord-button {
+            background-color: gray;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 8px;
+            font-size: 18px;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .discord-button:hover {
+            background-color: #555;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="header">Srév</div>
+
+    <div class="cards">
+        <div class="card">
+            <h3>أرخص الأسعار</h3>
+            <p>نقدم لك أفضل السيرفرات بأسعار لا تنافس.</p>
+            <p>We offer you the best servers at unbeatable prices.</p>
+        </div>
+
+        <div class="card">
+            <h3>أسرع خدمة</h3>
+            <p>تنفيذ الطلبات بسرعة وبدون تأخير.</p>
+            <p>Fast order processing with no delays.</p>
+        </div>
+
+        <div class="card">
+            <h3>أفضل جودة</h3>
+            <p>سيرفراتنا تعمل بكفاءة عالية واستقرار دائم.</p>
+            <p>Our servers run with high efficiency and constant stability.</p>
+        </div>
+
+        <div class="card">
+            <h3>كميات كبيرة</h3>
+            <p>إمكانية طلب كميات كبيرة بأسعار مخفضة.</p>
+            <p>Ability to order large quantities at discounted rates.</p>
+        </div>
+    </div>
+
+    <div class="button-container">
+        <a href="https://discord.gg/fx9GjgWhP2" class="discord-button" target="_blank">
+            دخول سيرفرنا لطلب أو الاستفسار
+        </a>
+    </div>
+
+</body>
+</html>
