--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom right, #d7d6d6, #918b88, #565555);
-            color: #333;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f4f4;
+            color: #fff;
         }
 
         .header {
             text-align: center;
-            padding: 60px 20px 30px;
-            font-size: 64px;
+            padding: 50px 20px 30px;
+            font-size: 36px;
             font-weight: bold;
-            color: #222;
+            color: #333;
         }
 
         .cards {
@@ -29,19 +29,23 @@
         }
 
         .card {
-            background-color: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            background-color: #3c3c3c;
+            padding: 25px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            color: #fff;
         }
 
         .card h3 {
-            margin: 0 0 10px;
-            color: #444;
+            margin: 0 0 12px;
+            font-size: 24px;
+            font-weight: bold;
         }
 
         .card p {
-            margin: 6px 0;
+            margin: 10px 0;
+            font-size: 16px;
+            line-height: 1.7;
         }
 
         .button-container {
@@ -71,27 +75,27 @@
 
     <div class="cards">
         <div class="card">
-            <h3>أرخص الأسعار</h3>
-            <p>نقدم لك أفضل السيرفرات بأسعار لا تنافس.</p>
-            <p>We offer you the best servers at unbeatable prices.</p>
+            <h3>توفير سيرفرات بأسعار منافسة</h3>
+            <p>نحن نقدم لك أرخص السيرفرات في السوق مع الحفاظ على أعلى جودة ممكنة. سواء كنت تبحث عن سيرفر صغير أو بنية قوية لمشروع كبير، ستجد لدينا ما يناسبك.</p>
+            <p>سعرنا ثابت، وخدماتنا شاملة، وهدفنا رضاك الكامل.</p>
         </div>
 
         <div class="card">
-            <h3>أسرع خدمة</h3>
-            <p>تنفيذ الطلبات بسرعة وبدون تأخير.</p>
-            <p>Fast order processing with no delays.</p>
+            <h3>سرعة استجابة وتنفيذ</h3>
+            <p>ننفذ طلباتك بسرعة وبدون تأخير. فريق الدعم لدينا متاح دائمًا للرد على استفساراتك ومساعدتك في أي وقت.</p>
+            <p>نتميز بسرعة الرد، ووقت التسليم الفوري بمجرد تأكيد الطلب.</p>
         </div>
 
         <div class="card">
-            <h3>أفضل جودة</h3>
-            <p>سيرفراتنا تعمل بكفاءة عالية واستقرار دائم.</p>
-            <p>Our servers run with high efficiency and constant stability.</p>
+            <h3>جودة واستقرار مضمون</h3>
+            <p>سيرفراتنا تعمل بكفاءة عالية واستقرار تام. نحرص على استخدام أحدث التقنيات لضمان تشغيل مستمر بدون انقطاعات أو مشاكل.</p>
+            <p>نمنحك ضمان جودة، وتجربة سلسة دون انقطاع في الخدمة.</p>
         </div>
 
         <div class="card">
-            <h3>كميات كبيرة</h3>
-            <p>إمكانية طلب كميات كبيرة بأسعار مخفضة.</p>
-            <p>Ability to order large quantities at discounted rates.</p>
+            <h3>كميات كبيرة بأسعار الجملة</h3>
+            <p>إذا كنت تبحث عن توريد كميات كبيرة من السيرفرات أو الحسابات، فنحن نوفر لك خططًا خاصة بأسعار تنافسية جداً.</p>
+            <p>التعامل الشهري متاح، مع خصومات خاصة لعملائنا الدائمين.</p>
         </div>
     </div>
 
