--- a/index.html
+++ b/index.html
@@ -1,109 +1,127 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <title>Srév - سيرفرات</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f4f4f4;
-            color: #fff;
-        }
+  <meta charset="UTF-8" />
+  <title>Srév - السيرفرات</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f2f2f2; /* أبيض مخلوط رمادي */
+    }
 
-        .header {
-            text-align: center;
-            padding: 50px 20px 30px;
-            font-size: 36px;
-            font-weight: bold;
-            color: #333;
-        }
+    .header {
+      text-align: center;
+      font-size: 36px;
+      font-weight: bold;
+      padding: 40px 0 10px;
+      color: #333;
+    }
 
-        .cards {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
+    .sub-header {
+      text-align: center;
+      font-size: 22px;
+      color: #333;
+      margin-bottom: 30px;
+    }
 
-        .card {
-            background-color: #3c3c3c;
-            padding: 25px;
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-            color: #fff;
-        }
+    .cards {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      max-width: 1000px;
+      margin: auto;
+      padding: 0 20px;
+    }
 
-        .card h3 {
-            margin: 0 0 12px;
-            font-size: 24px;
-            font-weight: bold;
-        }
+    .card {
+      width: 300px;
+      height: 300px;
+      background-color: #3c3c3c;
+      color: #fff;
+      border-radius: 20px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
 
-        .card p {
-            margin: 10px 0;
-            font-size: 16px;
-            line-height: 1.7;
-        }
+    .card h3 {
+      font-size: 20px;
+      margin-bottom: 10px;
+      font-weight: bold;
+    }
 
-        .button-container {
-            text-align: center;
-            margin: 40px 0;
-        }
+    .card p {
+      font-size: 15px;
+      line-height: 1.7;
+      margin: 5px 0;
+    }
 
-        .discord-button {
-            background-color: gray;
-            color: white;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 8px;
-            font-size: 18px;
-            cursor: pointer;
-            text-decoration: none;
-        }
+    .button-container {
+      text-align: center;
+      margin: 50px 0 30px;
+    }
 
-        .discord-button:hover {
-            background-color: #555;
-        }
-    </style>
+    .discord-button {
+      background-color: gray;
+      color: white;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    .discord-button:hover {
+      background-color: #5a5a5a;
+    }
+
+    @media (max-width: 768px) {
+      .card {
+        width: 90%;
+        height: auto;
+      }
+    }
+  </style>
 </head>
 <body>
 
-    <div class="header">Srév</div>
+  <div class="header">Srév</div>
+  <div class="sub-header">سيرفرات بأسعار مميزة وجودة عالية</div>
 
-    <div class="cards">
-        <div class="card">
-            <h3>توفير سيرفرات بأسعار منافسة</h3>
-            <p>نحن نقدم لك أرخص السيرفرات في السوق مع الحفاظ على أعلى جودة ممكنة. سواء كنت تبحث عن سيرفر صغير أو بنية قوية لمشروع كبير، ستجد لدينا ما يناسبك.</p>
-            <p>سعرنا ثابت، وخدماتنا شاملة، وهدفنا رضاك الكامل.</p>
-        </div>
-
-        <div class="card">
-            <h3>سرعة استجابة وتنفيذ</h3>
-            <p>ننفذ طلباتك بسرعة وبدون تأخير. فريق الدعم لدينا متاح دائمًا للرد على استفساراتك ومساعدتك في أي وقت.</p>
-            <p>نتميز بسرعة الرد، ووقت التسليم الفوري بمجرد تأكيد الطلب.</p>
-        </div>
-
-        <div class="card">
-            <h3>جودة واستقرار مضمون</h3>
-            <p>سيرفراتنا تعمل بكفاءة عالية واستقرار تام. نحرص على استخدام أحدث التقنيات لضمان تشغيل مستمر بدون انقطاعات أو مشاكل.</p>
-            <p>نمنحك ضمان جودة، وتجربة سلسة دون انقطاع في الخدمة.</p>
-        </div>
-
-        <div class="card">
-            <h3>كميات كبيرة بأسعار الجملة</h3>
-            <p>إذا كنت تبحث عن توريد كميات كبيرة من السيرفرات أو الحسابات، فنحن نوفر لك خططًا خاصة بأسعار تنافسية جداً.</p>
-            <p>التعامل الشهري متاح، مع خصومات خاصة لعملائنا الدائمين.</p>
-        </div>
+  <div class="cards">
+    <div class="card">
+      <h3>أرخص الأسعار</h3>
+      <p>نوفر لك أقل الأسعار في السوق بدون التنازل عن الجودة. استثمر بأقل تكلفة واحصل على أعلى مردود.</p>
     </div>
 
-    <div class="button-container">
-        <a href="https://discord.gg/fx9GjgWhP2" class="discord-button" target="_blank">
-            دخول سيرفرنا لطلب أو الاستفسار
-        </a>
+    <div class="card">
+      <h3>سرعة تسليم</h3>
+      <p>نجهز طلبك فوراً بعد الدفع. لا انتظار، لا تأخير. نخدمك بأسرع وقت ممكن.</p>
     </div>
+
+    <div class="card">
+      <h3>كميات بالجملة</h3>
+      <p>جاهزين لتوريد كميات كبيرة بشكل يومي أو شهري مع خصومات مميزة ومتابعة مستمرة.</p>
+    </div>
+
+    <div class="card">
+      <h3>جودة مضمونة</h3>
+      <p>نستخدم أفضل الأدوات وأحدث التقنيات لضمان استقرار الخدمة لأطول وقت ممكن.</p>
+    </div>
+  </div>
+
+  <div class="button-container">
+    <a href="https://discord.gg/fx9GjgWhP2" class="discord-button" target="_blank">
+      دخول سيرفرنا لطلب أو الاستفسار
+    </a>
+  </div>
 
 </body>
 </html>
