--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
   <meta charset="UTF-8">
   <title>بيع السيرفرات</title>
 
-  <!-- خط عنوان عريض وغريب -->
+  <!-- خطوط -->
   <link href="https://fonts.googleapis.com/css2?family=Changa:wght@800&display=swap" rel="stylesheet">
-  <!-- خط نصوص كروت عريض جدًا ومتغير -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@1000&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
       padding: 0;
-      color: white;
       background-image: url('https://cdn.discordapp.com/attachments/1327702608458289193/1385272170564947978/IMG_2361.webp?ex=685576be&is=6854253e&hm=86b4b1571585e0cb7968047597200257e80091d9fe39ef9ce6b40b9eec29d313&');
       background-size: cover;
       background-position: center;
@@ -35,46 +33,46 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 50px;
-      gap: 50px;
+      margin-top: 60px;
+      gap: 60px;
     }
 
     .card {
-      background-color: rgba(200, 200, 200, 0.2);
-      border: 3px solid white;
+      background-color: rgba(240, 240, 240, 0.95);
+      border: 4px solid white;
       border-radius: 25px;
-      padding: 30px;
-      width: 400px;
-      height: 400px;
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
+      padding: 40px;
+      width: 600px;
+      height: 600px;
+      box-shadow: 0 0 35px rgba(0, 0, 0, 0.2);
       overflow-y: auto;
-      font-size: 20px;
-      backdrop-filter: blur(5px);
+      font-size: 24px;
+      backdrop-filter: blur(6px);
     }
 
     .card p {
-      margin: 10px 0;
-      line-height: 1.9;
+      margin: 14px 0;
+      line-height: 2;
       font-family: 'Cairo Play', sans-serif;
       font-weight: 1000;
-      color: #fff;
+      color: #111; /* لون الخط أسود */
     }
 
     .button {
       display: inline-block;
-      margin: 60px auto;
-      background-color: gray;
+      margin: 70px auto;
+      background-color: black;
       color: white;
       text-decoration: none;
-      padding: 12px 25px;
+      padding: 14px 30px;
       border-radius: 10px;
-      font-size: 18px;
+      font-size: 20px;
       font-weight: bold;
-      border: 2px solid white;
+      border: none;
     }
 
     .button:hover {
-      background-color: #888;
+      opacity: 0.9;
     }
 
     .btn-container {
