--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>بيع السيرفرات</title>
 
-  <!-- خطوط -->
+  <!-- الخطوط -->
   <link href="https://fonts.googleapis.com/css2?family=Changa:wght@800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@1000&display=swap" rel="stylesheet">
 
@@ -12,10 +12,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('https://cdn.discordapp.com/attachments/1327702608458289193/1385272170564947978/IMG_2361.webp?ex=685576be&is=6854253e&hm=86b4b1571585e0cb7968047597200257e80091d9fe39ef9ce6b40b9eec29d313&');
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
+      background-color: #444; /* خلفية رمادية قوية */
       font-family: 'Cairo Play', sans-serif;
     }
 
@@ -38,7 +35,7 @@
     }
 
     .card {
-      background-color: rgba(240, 240, 240, 0.95);
+      background-color: #eee; /* رمادي فاتح للكروت */
       border: 4px solid white;
       border-radius: 25px;
       padding: 40px;
@@ -47,7 +44,6 @@
       box-shadow: 0 0 35px rgba(0, 0, 0, 0.2);
       overflow-y: auto;
       font-size: 24px;
-      backdrop-filter: blur(6px);
     }
 
     .card p {
@@ -55,7 +51,7 @@
       line-height: 2;
       font-family: 'Cairo Play', sans-serif;
       font-weight: 1000;
-      color: #111; /* لون الخط أسود */
+      color: #111; /* نص أسود فقط بدون أي ألوان */
     }
 
     .button {
