--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
   <meta charset="UTF-8">
   <title>بيع السيرفرات</title>
 
-  <!-- الخطوط -->
-  <link href="https://fonts.googleapis.com/css2?family=Changa:wght@800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cairo+Play:wght@1000&display=swap" rel="stylesheet">
+  <!-- الخط الجديد -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700;800&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #444; /* خلفية رمادية قوية */
-      font-family: 'Cairo Play', sans-serif;
+      font-family: 'Cairo', sans-serif;
     }
 
     .title {
       text-align: center;
       font-size: 80px;
-      font-family: 'Changa', sans-serif;
       font-weight: 800;
       margin-top: 50px;
       color: white;
@@ -35,7 +33,7 @@
     }
 
     .card {
-      background-color: #eee; /* رمادي فاتح للكروت */
+      background-color: #eee;
       border: 4px solid white;
       border-radius: 25px;
       padding: 40px;
@@ -49,9 +47,8 @@
     .card p {
       margin: 14px 0;
       line-height: 2;
-      font-family: 'Cairo Play', sans-serif;
-      font-weight: 1000;
-      color: #111; /* نص أسود فقط بدون أي ألوان */
+      font-weight: 700;
+      color: #111;
     }
 
     .button {
